tests/snapshots/youtube__music_album_one_artist.snap
---
source: tests/youtube.rs
expression: album
---
MusicAlbum(
  id: "MPREb_rMegpebUBPU",
  playlist_id: Some("OLAK5uy_nZzwnG9SLy5l-hd5Ze0FH4LfTWMqDXQdY"),
  name: "Unbroken",
  cover: "[cover]",
  artists: [
    ArtistId(
      id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      name: "Demi Lovato",
    ),
  ],
  artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
  description: Some(RichText([
    Text(
      text: "Unbroken is the third studio album by American singer Demi Lovato. It was released on September 20, 2011, by Hollywood Records. Primarily a pop record, Lovato described the album as \"more mature\" and with more R&B elements than her previous material, citing Rihanna as the major influence. While some of the album\'s lyrical content was heavily influenced by Lovato\'s personal struggles, it also deals with lighter subjects, such as love and self empowerment. Contributions to the album\'s production came from a wide range of producers, including Toby Gad, Ryan Tedder, Timbaland, Jim Beanz and Rock Mafia.\nLovato initially began recording her third studio album in 2010 before going on tour with the Jonas Brothers on their Live in Concert Tour. After withdrawing from the tour to seek treatment for physical and emotional issues, Lovato continued work on the album and described the recording process as therapeutic. She collaborated with artists such as Missy Elliott, Timbaland, Dev, Iyaz, and Jason Derulo on several tracks.\n\nFrom Wikipedia (",
    ),
    Web(
      text: "https://en.wikipedia.org/wiki/Unbroke...",
      url: "https://en.wikipedia.org/wiki/Unbroken_(Demi_Lovato_album)",
    ),
    Text(
      text: ") under Creative Commons Attribution CC-BY-SA 3.0 (",
    ),
    Web(
      text: "https://creativecommons.org/licenses/...",
      url: "https://creativecommons.org/licenses/by-sa/3.0/legalcode",
    ),
    Text(
      text: ")",
    ),
  ])),
  album_type: Album,
  year: Some(2011),
  by_va: false,
  tracks: [
    TrackItem(
      id: "js0moD0CIRQ",
      name: "All Night Long",
      duration: Some(195),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
        ArtistId(
          id: Some("UCKqVP7_535ELJu2OeEd3zzQ"),
          name: "Missy Elliott",
        ),
        ArtistId(
          id: Some("UCStR3TnjvL7CL8ZNFPKmRXw"),
          name: "Timbaland",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(1),
      by_va: false,
    ),
    TrackItem(
      id: "-xFJfXE2Cms",
      name: "Who\'s That Boy",
      duration: Some(193),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
        ArtistId(
          id: Some("UC58M_VmdxEw-h-p_HgeE0Zg"),
          name: "Dev",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(2),
      by_va: false,
    ),
    TrackItem(
      id: "KWDAaQDq8CQ",
      name: "You\'re My Only Shorty",
      duration: Some(187),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
        ArtistId(
          id: Some("UC0tIFKS5uijPeJLjH8uAWJg"),
          name: "Iyaz",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(3),
      by_va: false,
    ),
    TrackItem(
      id: "0bcovdD1gQo",
      name: "Together",
      duration: Some(274),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
        ArtistId(
          id: Some("UCA7oqkXUZIlT8QXhxaIR4RA"),
          name: "Jason Derulo",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(4),
      by_va: false,
    ),
    TrackItem(
      id: "lJsqxERcxR8",
      name: "Lightweight",
      duration: Some(242),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(5),
      by_va: false,
    ),
    TrackItem(
      id: "iLfB6-slQdc",
      name: "Unbroken",
      duration: Some(199),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(6),
      by_va: false,
    ),
    TrackItem(
      id: "4DjGZIdMcZk",
      name: "Fix a Heart",
      duration: Some(194),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(7),
      by_va: false,
    ),
    TrackItem(
      id: "hakoZyX4QIc",
      name: "Hold Up",
      duration: Some(172),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(8),
      by_va: false,
    ),
    TrackItem(
      id: "GOh96GiHVgI",
      name: "Mistake",
      duration: Some(214),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(9),
      by_va: false,
    ),
    TrackItem(
      id: "ne_jRAHABx0",
      name: "Give Your Heart a Break",
      duration: Some(206),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(10),
      by_va: false,
    ),
    TrackItem(
      id: "g8oyC2g5V64",
      name: "Skyscraper",
      duration: Some(222),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(11),
      by_va: false,
    ),
    TrackItem(
      id: "RxTEv7wXvG0",
      name: "In Real Life",
      duration: Some(178),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(12),
      by_va: false,
    ),
    TrackItem(
      id: "V8iVLlSZeNs",
      name: "My Love Is Like a Star",
      duration: Some(231),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(13),
      by_va: false,
    ),
    TrackItem(
      id: "OESslKlpao4",
      name: "For the Love of a Daughter",
      duration: Some(241),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(14),
      by_va: false,
    ),
    TrackItem(
      id: "ennw5cHAebo",
      name: "Skyscraper (Wizz Dumb Remix)",
      duration: Some(223),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "Demi Lovato",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "Unbroken",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(15),
      by_va: false,
    ),
  ],
  variants: [],
)
