tests/snapshots/youtube__music_album_one_artist_intl.snap
---
source: tests/youtube.rs
expression: album
---
MusicAlbum(
  id: "MPREb_rMegpebUBPU",
  playlist_id: Some("OLAK5uy_nZzwnG9SLy5l-hd5Ze0FH4LfTWMqDXQdY"),
  name: "[name]",
  cover: "[cover]",
  artists: [
    ArtistId(
      id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      name: "[name]",
    ),
  ],
  artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
  description: "[description]",
  album_type: Album,
  year: Some(2011),
  by_va: false,
  tracks: [
    TrackItem(
      id: "js0moD0CIRQ",
      name: "[name]",
      duration: Some(195),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
        ArtistId(
          id: Some("UCKqVP7_535ELJu2OeEd3zzQ"),
          name: "[name]",
        ),
        ArtistId(
          id: Some("UCStR3TnjvL7CL8ZNFPKmRXw"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(1),
      by_va: false,
    ),
    TrackItem(
      id: "-xFJfXE2Cms",
      name: "[name]",
      duration: Some(193),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
        ArtistId(
          id: Some("UC58M_VmdxEw-h-p_HgeE0Zg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(2),
      by_va: false,
    ),
    TrackItem(
      id: "KWDAaQDq8CQ",
      name: "[name]",
      duration: Some(187),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
        ArtistId(
          id: Some("UC0tIFKS5uijPeJLjH8uAWJg"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(3),
      by_va: false,
    ),
    TrackItem(
      id: "0bcovdD1gQo",
      name: "[name]",
      duration: Some(274),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
        ArtistId(
          id: Some("UCA7oqkXUZIlT8QXhxaIR4RA"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(4),
      by_va: false,
    ),
    TrackItem(
      id: "lJsqxERcxR8",
      name: "[name]",
      duration: Some(242),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(5),
      by_va: false,
    ),
    TrackItem(
      id: "iLfB6-slQdc",
      name: "[name]",
      duration: Some(199),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(6),
      by_va: false,
    ),
    TrackItem(
      id: "4DjGZIdMcZk",
      name: "[name]",
      duration: Some(194),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(7),
      by_va: false,
    ),
    TrackItem(
      id: "hakoZyX4QIc",
      name: "[name]",
      duration: Some(172),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(8),
      by_va: false,
    ),
    TrackItem(
      id: "GOh96GiHVgI",
      name: "[name]",
      duration: Some(214),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(9),
      by_va: false,
    ),
    TrackItem(
      id: "ne_jRAHABx0",
      name: "[name]",
      duration: Some(206),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(10),
      by_va: false,
    ),
    TrackItem(
      id: "g8oyC2g5V64",
      name: "[name]",
      duration: Some(222),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(11),
      by_va: false,
    ),
    TrackItem(
      id: "RxTEv7wXvG0",
      name: "[name]",
      duration: Some(178),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(12),
      by_va: false,
    ),
    TrackItem(
      id: "V8iVLlSZeNs",
      name: "[name]",
      duration: Some(231),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(13),
      by_va: false,
    ),
    TrackItem(
      id: "OESslKlpao4",
      name: "[name]",
      duration: Some(241),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(14),
      by_va: false,
    ),
    TrackItem(
      id: "ennw5cHAebo",
      name: "[name]",
      duration: Some(223),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCwem2sj-QUJCiWiPAo9JuAw"),
      album: Some(AlbumId(
        id: "MPREb_rMegpebUBPU",
        name: "[name]",
      )),
      view_count: "[view_count]",
      is_video: false,
      track_nr: Some(15),
      by_va: false,
    ),
  ],
  variants: [],
)
