tests/snapshots/youtube__music_album_only_singles.snap
---
source: tests/youtube.rs
expression: artist
---
MusicArtist(
  id: "UCfwCE5VhPMGxNPFxtVv7lRw",
  name: "Sulli",
  header_image: "[header_image]",
  description: "Choi Jin-ri, better known by her stage name Sulli, was a South Korean actress and singer. She first made her debut as a child actress, appearing as a supporting cast member on the SBS historical drama Ballad of Seodong. Following this, she earned a number of guest roles, appearing in the television series Love Needs a Miracle and Drama City, and the film Vacation. She then subsequently appeared in the independent films Punch Lady and BA:BO, the former being her first time cast in a substantial dramatic role.\nAfter signing a record deal with SM Entertainment, Sulli rose to prominence as a member of the girl group f(x) formed in 2009. The group achieved both critical and commercial success, with four Korean number-one singles and international recognition after becoming the first K-pop act to perform at SXSW. Concurrently with her music career, Sulli returned to acting by starring in the SBS romantic comedy series, To the Beautiful You, a Korean adaptation of the shōjo manga Hana-Kimi where her performance was positively received and earned her two SBS Drama Awards and a nomination at the 49th Paeksang Arts Awards.\n\nFrom Wikipedia (https://en.wikipedia.org/wiki/Sulli) under Creative Commons Attribution CC-BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0/legalcode)",
  wikipedia_url: Some("https://en.wikipedia.org/wiki/Sulli"),
  subscriber_count: "[subscriber_count]",
  tracks: "[tracks]",
  albums: [
    AlbumItem(
      id: "MPREb_vq8dZfFBEdx",
      name: "고블린 Goblin",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCfwCE5VhPMGxNPFxtVv7lRw"),
          name: "Sulli",
        ),
      ],
      album_type: Single,
      year: Some(2019),
      by_va: false,
    ),
  ],
  playlists: "[playlists]",
  similar_artists: "[artists]",
  tracks_playlist_id: None,
  videos_playlist_id: Some("OLAK5uy_lmH3iVq6lqjsnLkBWzpvRTh0DidLzbU-I"),
)
